[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-utils"
version = "0.0.1"
authors = [
  { name="Tiago Matos", email="tiagolofi@example.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "python-dotenv"
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/tiagolofi/pdf-utils"
Issues = "https://github.com/tiagolofi/pdf-utils/issues"
    
